--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -d 250  -w db.json"
+    "server": "json-server -p 4000 -d 250  -w db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
