--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux_api",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://OleynikDima.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -23,7 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p 4000 -d 250  -w db.json"
+    "server": "json-server -p 4000 -d 250  -w db.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
